// hero/hero.proto
syntax = "proto3";
package stac.heroes;

import "google/protobuf/empty.proto";

service HeroesService {
  rpc FindOne (HeroById) returns (Hero);
  rpc FindAll (ListHeroesRequest) returns (ListHeroesResponse);
}

message HeroById {
  int32 id_hero = 1;
}

message Hero {
  int32 id = 1;
  string name = 2;
}

message ListHeroesRequest {

}

message ListHeroesResponse {
  repeated Hero heroes = 1;
}